--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,11 @@ DITSSO_INTERNAL_CLIENT_ID=localdev_ditsso_client_id
 DITSSO_INTERNAL_CLIENT_SECRET=localdev_ditsso_client_secret
 DITSSO_CALLBACK_URL=http://localhost:3000/auth/ditsso_internal/callback
 
+# Set this variable in development to use the Omniauth developer strategy
+# instead of DITSSO.
+#
+DEVELOPER_AUTH_STRATEGY=
+
 SSL_ON=false
 GA_TRACKING_ID=UA-XXXXX-X
 MAX_TOKENS_PER_HOUR=8
